crates/tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_i32_neg.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `i32`
  ┌─ [snippet]:3:7
  │
3 │   i32(-2147483649)
  │       ^^^^^^^^^^^ does not fit into type `i32`


