crates/tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_i64_pos.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `i64`
  ┌─ [snippet]:3:7
  │
3 │   i64(9223372036854775808)
  │       ^^^^^^^^^^^^^^^^^^^ does not fit into type `i64`


