crates/tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_literal_too_big.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u256`
  ┌─ [snippet]:3:3
  │
3 │   115792089237316195423570985008687907853269984665640564039457584007913129639936
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not fit into type `u256`


